--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,11 @@ services:
     networks:
       - mifos-network
     depends_on:
-      mifos-db-server:
-        condition: service_healthy
+      #converted the string to array
+      - mifos-db-server
+      #mifos-db-server:
+        #remove condition 
+        #condition: service_healthy
   #Mysql db service      
   mifos-db-server:
     build:
